--- a/app/views/amendments/_form.html.erb
+++ b/app/views/amendments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [budget, amendment.becomes(Amendment)], local: true) do |form| %>
+<%= bootstrap_form_for([budget, amendment.becomes(Amendment)], layout: :horizontal, label_col: "col-sm-3 text-sm-right", control_col: "col-sm-7") do |f| %>
 
   <% if amendment.errors.any? %>
     <div id="error_explanation">
@@ -12,24 +12,20 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :number %>
-    <%= form.text_field :number %>
-  </div>
-
   <% unless amendment.locked_type? %>
-    <div class="field">
-      <%= form.label :type %>
-      <%= form.collection_radio_buttons :type, Amendment.descendants.map{|a| [a.to_s, a.new.type_name]}, :first, :last %>
-    </div>
+    <%= f.collection_radio_buttons :type, Amendment.descendants.map{|a| [a.to_s, a.new.type_name]}, :first, :last, custom: :switch, inline: true, wrapper_class: 'align-items-center' %>
   <% end %>
 
-  <div class="field">
-    <%= form.label :explanation %>
-    <%= form.text_area :explanation %>
-  </div>
+  <%= f.text_field :number %>
+  <%= f.text_area :explanation, rows: '7' %>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit class: 'btn btn-sm btn-success' %>
+    <% if controller.action_name == 'edit' %>
+      <%= link_to t('helpers.action.show_model', model: Amendment.model_name.human.downcase), amendment_path(amendment), class: 'btn btn-sm btn-primary' %>
+      <%= link_to t('helpers.views.list_model', model: Amendment.model_name.human(count: 0).downcase), budget_amendments_path(amendment.budget), class: 'btn btn-sm btn-primary' %>
+    <% else %>
+    <%= link_to t('helpers.action.cancel'), budget_amendments_path(amendment.budget), class: 'btn btn-sm btn-danger' %>
+    <% end %>
   </div>
 <% end %>
