--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,24 +12,27 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container pr-0">
-        <%= link_to t(:site_title), budgets_path, class: 'navbar-brand' %>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse container" id="main_nav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-            <% if user_signed_in? %>
-              <%= link_to t('active_admin.logout'), destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            <% else %>
-              <%= link_to t('active_admin.devise.login.title'), new_user_session_path, class: 'nav-link' %>
-            <% end %>
-          </ul>
-        </div>
+            <%= link_to t(:site_title), budgets_path, class: 'navbar-brand' %>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse container" id="main_nav">
+              <ul class="navbar-nav mr-auto"></ul>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                <% if user_signed_in? %>
+                  <%= link_to (fa_icon 'sign-out', text: t('active_admin.logout')), destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                <% else %>
+                  <%= link_to t('active_admin.devise.login.title'), new_user_session_path, class: 'nav-link' %>
+                <% end %>
+              </ul>
+            </div>
+
       </div>
     </nav>
-    <div class="container">
+    <div class="container pb-3">
       <%= render "partials/flash_message" %>
       <%= yield %>
     </div>
