--- a/app/views/amendments/index.html.erb
+++ b/app/views/amendments/index.html.erb
@@ -1,35 +1,109 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <h1 class="page-title col-12 col-md-6"><%= fa_icon "archive", text: t('.title', budget: budget.title, count: amendments.length) %></h1>
+  <h1 class="page-title col-12 col-md-6 text-right">
+    <%= link_to fa_icon('plus', text: t('helpers.submit.amendment.create')), new_budget_amendment_path(budget), class: 'btn btn-sm btn-outline-success' %>
+  </h1>
+</div>
 
-<h1><%= t('.title', budget: budget.title) %></h1>
+<div class="row">
+<% amendments.each do |amendment| %>
+<a class="card-block py-2 col-12" href="<%= amendment_path(amendment) %>" style="flex-grow: 2;">
+  <div class="card">
+    <div class="card-header text-dark">
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <b class="card-title"><%= t('helpers.views.amendment.number', amendment: amendment.number) %></b>
+        </div>
+        <div class="col-12 col-md-6">
+        <%= amendment_section_link(amendment) %>
+        </div>
+        <div class="col-12 col-md-3 text-right">
+          <span><%= amendment.type_name %></span>
+        </div>
+      </div>
+    </div>
+    <div class="card-body text-dark">
+      <div class="row">
 
-<table>
-  <thead>
-    <tr>
-      <th><%= Amendment.human_attribute_name(:number) %></th>
-      <th><%= Amendment.human_attribute_name(:type) %></th>
-      <th><%= Amendment.human_attribute_name(:explanation) %></th>
-      <th><%= Amendment.human_attribute_name(:user) %></th>
-      <th><%= Amendment.human_attribute_name(:budget) %></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <div class="col-12 ">
+          <p class="card-text"><%= truncate_with_title amendment.explanation %></p>
+        </div>
 
-  <tbody>
-    <% amendments.each do |amendment| %>
-      <tr>
-        <td><%= amendment.number %></td>
-        <td><%= amendment.type_name %></td>
-        <td><%= amendment.explanation %></td>
-        <td><%= amendment.user.email %></td>
-        <td><%= amendment.budget.title %></td>
-        <td><%= link_to t('helpers.action.show'), amendment_path(amendment) %></td>
-        <td><%= link_to t('helpers.action.edit'), edit_amendment_path(amendment) %></td>
-        <td><%= link_to t('helpers.action.destroy'), amendment_path(amendment), method: :delete, data: { confirm: t('helpers.messages.are_you_sure') } %></td>
-      </tr>
+        <div class="col-12">
+        <% if amendment.allow_articulated? %>
+  <% if amendment.articulated? %>
+    <table class="w-100">
+      <tbody>
+        <% articulated = amendment.articulated %>
+        <tr>
+          <td><b><%= Articulated.human_attribute_name(:type) %>:</b> <%= articulated.type_name %></td>
+          <td><b><%= Articulated.human_attribute_name(:title) %>:</b> <%= articulated.title %></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+        <% end %>
+
+        <% if amendment.allow_modifications? %>
+          <% if amendment.modifications.size.positive? %>
+            <table class="w-100 mt-2">
+              <thead class="text-secondary">
+                <tr>
+                  <th><%= Modification.human_attribute_name(:service) %></th>
+                  <th><%= Modification.human_attribute_name(:program) %></th>
+                  <th><%= Modification.human_attribute_name(:chapter) %></th>
+                  <th><%= Modification.human_attribute_name(:article) %></th>
+                  <th><%= Modification.human_attribute_name(:concept) %></th>
+                  <th><%= Modification.human_attribute_name(:subconcept) %></th>
+                  <th><%= Modification.human_attribute_name(:project) %></th>
+                  <th style="text-align: right;"><%= Modification.human_attribute_name(:amount) %></th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <% amendment.modifications.each do |modification| %>
+                  <tr style="border-bottom: 1px solid #eee;">
+                    <td title="<%= modification.service&.full_title %>"><%= modification.service&.ref %></td>
+                    <td title="<%= modification.program&.full_title %>"><%= modification.program&.ref %></td>
+                    <td title="<%= modification.chapter&.full_title %>"><%= modification.chapter&.ref %></td>
+                    <td title="<%= modification.article&.full_title %>"><%= modification.article&.ref %></td>
+                    <td title="<%= modification.concept&.full_title %>"><%= modification.concept&.ref %></td>
+                    <td title="<%= modification.subconcept&.full_title %>"><%= modification.subconcept&.ref %></td>
+                    <td><%= modification.project %></td>
+                    <td style="text-align: right;"><%= number_to_currency modification.amount %></td>
+                  </tr>
+                <% end %>
+                <% if false %>
+                <tr style="border-bottom: 1px solid #eee;">
+                  <td colspan="8" style="text-align: right;"><b class="text-secondary"><%= t('helpers.label.amendment.total_amount') %>:</b> <%= number_to_currency amendment.modifications.sum(:amount) %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          <% end %>
+
+        <% end %>
+
+        </div>
+
+      </div>
+    </div>
+
+    <% if false %>
+    <div class="card-footer text-dark">
+      <div class="row">
+        <div class="col-12 text-right">
+          <p class="card-text"><%= t 'helpers.views.by_author', author: amendment.user.email %></p>
+        </div>        
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
 
-<br>
+  </div>
+</a>
+<% end %>
+</div>
 
-<%= link_to t('amendments.new.title'), new_budget_amendment_path(budget) %>
+<div class="actions text-right">
+  <%= link_to fa_icon('plus', text: t('helpers.submit.amendment.create')), new_budget_amendment_path(budget), class: 'btn btn-sm btn-outline-success' %>
+</div>
