--- a/app/views/articulateds/new.html.erb
+++ b/app/views/articulateds/new.html.erb
@@ -1,5 +1,3 @@
-<h1><%= t('.title') %></h1>
+<h1 class="page-title"><%= t('.title', budget: budget.title, amendment: amendment.number) %></h1>
 
 <%= render 'form', amendment: amendment, articulated: articulated %>
-
-<%= link_to t('helpers.action.back'), amendment_path(amendment) %>
