Use btn-sm class like in the other buttons

--- a/app/views/articulateds/_form.html.erb
+++ b/app/views/articulateds/_form.html.erb
@@ -20,8 +20,8 @@
   <%= f.text_field :number, wrapper_class: 'number' %>
 
   <div class="actions">
-    <%= f.submit class: 'btn btn-success' %>
-    <%= link_to t('helpers.action.back'), amendment_path(amendment), class: 'btn btn-danger' %>
+    <%= f.submit class: 'btn btn-sm btn-success' %>
+    <%= link_to t('helpers.action.back'), amendment_path(amendment), class: 'btn btn-sm btn-danger' %>
   </div>
 <% end %>
 
