Solve commented issues in pull request

--- a/app/views/amendments/index.html.erb
+++ b/app/views/amendments/index.html.erb
@@ -15,7 +15,7 @@
           <b class="card-title"><%= t('helpers.views.amendment.number', amendment: amendment.number) %></b>
         </div>
         <div class="col-12 col-md-6">
-        <%= amendment_section_link(amendment) %>
+        <%= amendment_section_label(amendment) %>
         </div>
         <div class="col-12 col-md-3 text-right">
           <span><%= amendment.type_name %></span>
