Add any_ prefix

--- a/app/views/amendments/index.html.erb
+++ b/app/views/amendments/index.html.erb
@@ -31,7 +31,7 @@
 
         <div class="col-12">
         <% if amendment.allow_articulated? %>
-  <% if amendment.articulated? %>
+  <% if amendment.any_articulated? %>
     <table class="w-100">
       <tbody>
         <% articulated = amendment.articulated %>
