--- a/app/views/amendments/index.html.erb
+++ b/app/views/amendments/index.html.erb
@@ -56,12 +56,13 @@
                   <th><%= Modification.human_attribute_name(:concept) %></th>
                   <th><%= Modification.human_attribute_name(:subconcept) %></th>
                   <th><%= Modification.human_attribute_name(:project) %></th>
+                  <th><%= Modification.human_attribute_name(:amount_sign) %></th>
                   <th style="text-align: right;"><%= Modification.human_attribute_name(:amount) %></th>
                 </tr>
               </thead>
 
               <tbody>
-                <% amendment.modifications.each do |modification| %>
+                <% amendment.modifications.additions_first.each do |modification| %>
                   <tr style="border-bottom: 1px solid #eee;">
                     <td title="<%= modification.service&.full_title %>"><%= modification.service&.ref %></td>
                     <td title="<%= modification.program&.full_title %>"><%= modification.program&.ref %></td>
@@ -70,6 +71,7 @@
                     <td title="<%= modification.concept&.full_title %>"><%= modification.concept&.ref %></td>
                     <td title="<%= modification.subconcept&.full_title %>"><%= modification.subconcept&.ref %></td>
                     <td><%= modification.project %></td>
+                    <td title="<%= modification.concept&.full_title %>"><%= t("helpers.label.modification.#{modification.amount_sign_human}") %></td>
                     <td style="text-align: right;"><%= number_to_currency modification.amount %></td>
                   </tr>
                 <% end %>
@@ -94,7 +96,7 @@
       <div class="row">
         <div class="col-12 text-right">
           <p class="card-text"><%= t 'helpers.views.by_author', author: amendment.user.email %></p>
-        </div>        
+        </div>
       </div>
     </div>
     <% end %>
