--- a/app/views/amendments/_form.html.erb
+++ b/app/views/amendments/_form.html.erb
@@ -2,8 +2,7 @@
 
   <% if amendment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(amendment.errors.count, "error") %> prohibited this amendment from being saved:</h2>
-
+      <h2><%= t('activerecord.errors.prohibited_from_being_saved', :model => Amendment.model_name.human.downcase, :count => amendment.errors.count) %></h2>
       <ul>
       <% amendment.errors.full_messages.each do |message| %>
         <li><%= message %></li>
