--- a/app/views/articulateds/_form.html.erb
+++ b/app/views/articulateds/_form.html.erb
@@ -1,8 +1,7 @@
 <%= bootstrap_form_for([amendment.becomes(Amendment), articulated.becomes(Articulated)], layout: :horizontal, label_col: "col-sm-3 text-sm-right", control_col: "col-sm-7") do |f| %>
   <% if articulated.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(articulated.errors.count, "error") %> prohibited this articulated from being saved:</h2>
-
+      <h2><%= t('activerecord.errors.prohibited_from_being_saved', :model => Articulated.model_name.human.downcase, :count => articulated.errors.count) %></h2>
       <ul>
       <% articulated.errors.full_messages.each do |message| %>
         <li><%= message %></li>
