--- a/app/views/modifications/_form.html.erb
+++ b/app/views/modifications/_form.html.erb
@@ -1,6 +1,6 @@
 <%= bootstrap_form_for([amendment.becomes(Amendment), modification.becomes(Modification)], layout: :horizontal, label_col: "col-sm-3 text-md-right", control_col: "col-sm-7") do |f| %>
   <% if modification.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-danger">
       <h2><%= t('activerecord.errors.prohibited_from_being_saved', :model => Modification.model_name.human.downcase, :count => modification.errors.count) %></h2>
       <ul>
       <% modification.errors.full_messages.each do |message| %>
