--- a/app/views/articulateds/_form.html.erb
+++ b/app/views/articulateds/_form.html.erb
@@ -1,8 +1,7 @@
 <%= bootstrap_form_for([amendment.becomes(Amendment), articulated.becomes(Articulated)], layout: :horizontal, label_col: "col-sm-3 text-sm-right", control_col: "col-sm-7") do |f| %>
   <% if articulated.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(articulated.errors.count, "error") %> prohibited this articulated from being saved:</h2>
-
+    <div id="error_explanation" class="alert alert-danger">
+      <h2><%= t('activerecord.errors.prohibited_from_being_saved', :model => Articulated.model_name.human.downcase, :count => articulated.errors.count) %></h2>
       <ul>
       <% articulated.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,9 +10,9 @@
     </div>
   <% end %>
 
-  <%= f.collection_radio_buttons :type, Articulated.descendants.map{|a| [a.to_s, a.new.type_name]}, :first, :last, custom: :switch, inline: true, wrapper_class: 'align-items-center type' %>
-  
-  <%= f.collection_select :section_id, budget.sections.all, :id, :full_title %>
+  <%= f.collection_radio_buttons :type, descendants_collection(Articulated), :first, :last, custom: :switch, inline: true, wrapper_class: 'align-items-center type' %>
+
+  <%= f.collection_select :section_id, budget.sections.all, :id, :full_title, prompt: true %>
   <%= f.text_field :title %>
   <%= f.text_area :text %>
   <%= f.text_area :justification %>
@@ -39,5 +38,4 @@
   $( document ).ready(function() {
       $("#type input").change();
   });
-  
 </script>
